# angsd-io

./: Cargo.toml  README.md
examples/: merge_saf.rs  read_saf.rs
src/: lib.rs  utils.rs
src/merge/: iter.rs  mod.rs  sequence_dict.rs
src/saf/: constants.rs  index.rs  mod.rs  read.rs  reader.rs  site.rs  utils.rs  write.rs
src/saf/index/: entry.rs  reader.rs
src/saf/read/: binary_read.rs  iter.rs  merge.rs  merged_reader.rs  position_reader.rs  reader.rs  value_reader.rs
src/saf/reader/: iter.rs  merge.rs  position_reader.rs  value_reader.rs
src/saf/write/: position_writer.rs  value_writer.rs
