[package]
name = "angsd-io"
version = "0.1.0"
authors = ["Malthe Sebro Rasmussen <malthe.rasmussen@bio.ku.dk>"]
license = "MIT"
edition = "2018"

[features]
default = ["ndarray"]

[dependencies]
byteorder = "1.4.*"
flate2 = "1.0.*"
indexmap = { version = "1.6.*", default-features = false }
noodles-bgzf = { git = "https://github.com/zaeleus/noodles.git", rev = "badc49ad" }

ndarray = { version = "0.14.*", optional = true, default-features = false }
